# UniversalDB

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  notes.md
src/: main.cc  master.cc  slave.cc  testclient.cc  utils.h
src/assert/: UniversalException.cc  UniversalException.h  assert.h
src/async/: AsyncQueue.cc  AsyncQueue.h  AsyncScheduler.h  TimerAsyncScheduler.cc  TimerAsyncScheduler.h
src/async/impl/: AsyncSchedulerImpl.cc  AsyncSchedulerImpl.h  TimerAsyncSchedulerImpl.cc  TimerAsyncSchedulerImpl.h
src/async/testing/: AsyncSchedulerTesting.cc  AsyncSchedulerTesting.h  (+4 more)
src/common/: common.h  types.h
src/constants/: constants.h
src/logging/: log.cc  log.h
src/master/: DataMaster.cc  DataMaster.h  GroupConfigManager.cc  GroupConfigManager.h  KeySpaceManager.cc  KeySpaceManager.h  MasterIncomingMessageHandler.cc  MasterIncomingMessageHandler.h  functors.h
src/net/: Channel.cc  Channel.h  Connections.cc  Connections.h  ConnectionsIn.cc  ConnectionsIn.h  ConnectionsOut.cc  ConnectionsOut.h  EndpointId.cc  EndpointId.h  IncomingMessage.h  SelfChannel.cc  SelfChannel.h  constants.h  endpoint_id.cc  endpoint_id.h
src/paxos/: MultiPaxosHandler.cc  MultiPaxosHandler.h  PaxosAcceptorState.cc  PaxosAcceptorState.h  PaxosConfigManager.cc  PaxosConfigManager.h  PaxosLearnerState.cc  PaxosLearnerState.h  PaxosLog.cc  PaxosLog.h  PaxosProposerState.cc  PaxosProposerState.h  PaxosTypes.h  ProposerQueue.cc  ProposerQueue.h  SinglePaxosHandler.cc  SinglePaxosHandler.h
src/proto/: CMakeLists.txt  client.proto  common.proto  master.proto  message.proto  message_client.proto  message_master.proto  message_slave.proto  message_tablet.proto  paxos.proto  paxos_master.proto  paxos_slave.proto  paxos_tablet.proto  slave.proto  sync.proto  tablet.proto
src/random/: Random.cc  Random.h
src/server/: ClientConnectionHandler.cc  ClientConnectionHandler.h  ConnectionHandler.cc  ConnectionHandler.h  FailureDetector.cc  FailureDetector.h  HeartbeatTracker.cc  HeartbeatTracker.h  KeySpaceRange.cc  KeySpaceRange.h  LogSyncer.cc  LogSyncer.h  ServerConnectionHandler.cc  ServerConnectionHandler.h  SlaveGroupId.cc  SlaveGroupId.h
src/slave/: ClientConnectionHandler.cc  ClientConnectionHandler.h  ClientRequestHandler.cc  ClientRequestHandler.h  FailureDetector.cc  FailureDetector.h  HeartbeatTracker.cc  HeartbeatTracker.h  IncomingMessageHandler.cc  IncomingMessageHandler.h  KVStore.cc  KVStore.h  LocalTransactionManager.cc  LocalTransactionManager.h  LogSyncer.cc  LogSyncer.h  ProductionContext.cc  ProposerQueue.cc  ProposerQueue.h  ServerConnectionHandler.cc  ServerConnectionHandler.h  SlaveConfigManager.cc  SlaveConfigManager.h  SlaveIncomingMessageHandler.cc  SlaveIncomingMessageHandler.h  SlaveKeySpaceManager.cc  SlaveKeySpaceManager.h  TabletId.cc  TabletId.h  TabletParticipant.cc  TabletParticipant.h  TabletParticipantManager.cc  TabletParticipantManager.h  TestingContext.cc  TestingContext.h  ThreadPool.cc  ThreadPool.h  functors.h
src/testing/: SlaveTesting.h  TestDriver.cc  TestDriver.h  Tests.cc  Tests.h  UnitTestDriver.cc  UnitTestDriver.h  test.cc
src/timing/: Timer.cc  Timer.h
src/utils/: pbutil.cc  pbutil.h  stringutils.cc  stringutils.h
testing/: test.cc
testing/integration/: SlaveTesting.cc  SlaveTesting.h  TestDriver.cc  TestDriver.h  Tests.cc  Tests.h
testing/unit/: UnitTestDriver.cc
(+34 files in other folders)
